# sbPanel

./: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/agents/: ui-redesign-expert.md  vuln-mgmt-expert.md
.github/workflows/: build.yml  deploy.yml
app/: package-lock.json
app/src/: App.css  App.tsx
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: crdt.rs  lib.rs  p2p.rs
docs/: arquitectura.html  migracion-postgres-review.html
public/: manifest.webmanifest  sw.js
scripts/: clean_tenable.py
spike/: Cargo.toml  test_bidirectional.sh  test_convergence.sh
spike/src/: main.rs
src/: App.css  App.tsx  Charts.tsx  main.tsx  supabase.ts
src/lib/: csv.ts  ingest.ts
supabase/: cerrar_puerta.sql  engine.sql  schema.sql
