[package]
name = "p2p-crdt-spike"
version = "0.1.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.54", features = [
    "tokio",
    "gossipsub",
    "mdns",
    "noise",
    "macros",
    "tcp",
    "yamux",
] }
automerge = "0.5"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
anyhow = "1"
